--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Backend API Configuration
-VUE_APP_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=http://localhost:8000/api/v1/
 
 # Environment
 NODE_ENV=development
 
 # Other configuration
-VUE_APP_APP_NAME=Association Management
-VUE_APP_VERSION=1.0.0
+VITE_APP_NAME=Association Management
+VITE_APP_VERSION=1.0.0
