updated items per page

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ NODE_ENV=development
 # Other configuration
 VITE_APP_NAME=Association Management
 VITE_APP_VERSION=1.0.0
+
+# Pagination
+VITE_ITEMS_PER_PAGE=5
