--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 # Development environment variables
 VITE_API_BASE_URL=http://localhost:8000/api/v1/
+
+# Pagination for development
+VITE_ITEMS_PER_PAGE=5
