--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
 # Production environment variables
 VITE_API_BASE_URL=https://management.bloom.com/api/v1/
+
+# Pagination for production
+VITE_ITEMS_PER_PAGE=10
